--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trying Github/title>
+        <title>Trying Github</title>
     </head>
     <body>
-      <h1>
-      Hello World!
+      <h1> 
+      This is a title.
       </h1>
 
       <p>
