--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
         <title>Trying Github</title>
     </head>
     <body>
-      <h1> 
+      <h1>
       This is a title.
       </h1>
 
       <p>
       This is a paragraph.
+
+      HELLO MY FRIENDS.
+      
       </p>
     </body>
 <html>
