--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Trying Github</title>
     </head>
     <body>
-      <h1> 
-      This is a title.
+      <h1>
+      Heyyy
       </h1>
 
       <p>
