--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trying Github/title>
+        <title>Title</title>
     </head>
     <body>
       <h1>
@@ -9,7 +9,7 @@
       </h1>
 
       <p>
-      This is a paragraph.
+      This is a paragraph
       </p>
     </body>
 <html>
