--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     </head>
     <body>
       <h1>
-      This is a title.
-      Heyyy
+          Steps of Colour
       </h1>
 
-      <p>
-      This is a paragraph.
+      <h2>
+          Welcome
+      </h2>
 
-      HELLO MY FRIENDS.
+      <p>
+          This is a photographic library / travel blog.
       </p>
     </body>
 <html>
