--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
         <title>Trying Github</title>
     </head>
     <body>
-      <h1>
+      <div class='opening'>
+        <h1>
           Steps of Colour
-      </h1>
+        </h1>
+      <img src="image/IMG_9931.jpg" alt="LSE campus sunset">
 
+      </div>
       <h2>
           Welcome
       </h2>
-
       <p>
           This is a photographic library / travel blog.
       </p>
+
+
+
     </body>
 <html>
