--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Trying Github</title>
+        <title>Travel Blog</title>
+        <link href='css/bootstrap.css' rel='stylesheet'>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
       <div class='opening'>
         <h1>
           Steps of Colour
         </h1>
-      <img src="image/IMG_9931.jpg" alt="LSE campus sunset">
+      <img src='images/IMG_9931.jpg' alt='LSE campus sunset' class="img-responsive img-rounded">
 
       </div>
       <h2>
