Changing font and altering a few things

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper" id='mynavbar'>
+    <div class="navbar-wrapper">
       <div class="container">
         <nav class="navbar navbar-static-top">
           <div class="container">
@@ -30,15 +30,15 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner" role="listbox">
+    <div id="openingpic" class="carousel slide">
+      <div class="carousel-inner">
         <div class="item active">
           <img class="first-slide" src='images/IMG_9931.jpg' alt='LSE campus sunset'>
           <div class="container">
             <div class="carousel-caption">
               <h1>Our footsteps</h1>
               <p>This is our travel blog/photograph library. Please enjoy.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">More information</a></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">Read more</a></p>
             </div>
           </div>
         </div>
