--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Carousel Template for Bootstrap</title>
+    <title>Rachel - Music</title>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -18,8 +18,9 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About us</a></li>
-                <li><a href="#">Destinations </a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#">Origianls</a></li>
+                <li><a hred="#">Covers</a></li>
               </ul>
             </div>
           </div>
@@ -30,62 +31,32 @@
 
     <!-- Carousel
     ================================================== -->
-    <div id="openingpic" class="carousel slide">
+    <div id="openingpic" class="carousel">
       <div class="carousel-inner">
         <div class="item active">
-          <img class="first-slide" src='images/IMG_9931.jpg' alt='LSE campus sunset'>
+          <img class="first-slide" src='images/ryan-holloway-273158.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
-              <h1>Our footsteps</h1>
-              <p>This is our travel blog/photograph library. Please enjoy.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Read more</a></p>
+              <h1>I'm Rachel and I sing once in a while.</h1>
+              <p>And here you can find some sad music, some of which I wrote, others are covers. Hope you enjoy.</p>
             </div>
           </div>
         </div>
       </div>
     </div><!-- /.carousel -->
 
-
-    <!-- Marketing messaging and featurettes
-    ================================================== -->
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
 
-      <!-- Three columns of text below the carousel -->
-      <div class="row">
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
-
       <!-- START THE FEATURETTES -->
-
-      <hr class="featurette-divider">
-
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
+          <p class="lead">It's a sad love song written in times of insecurity and doubt. <span class="text-muted">"Broken words, broken hearts, half drunk wine and empty cups. Close the curtains, don’t let the light in. Clasping hands, shivering bones, sound of opening and slamming doors..."</span></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/norwegianbird.jpeg" alt="Norwegian Birds">
         </div>
       </div>
 
@@ -93,11 +64,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Candle House. <span class="text-muted">Another original song.</span></h2>
+          <p class="lead">A song I wrote after hearing the story of my parents, how they fell in love, got married, and then stayed in an unintentional, stagnant, loveless silence for several years before they peacefully divorced. <span class="text-muted">I want to show that almost disturbing serenity, the delicate balance of hope and despair as their relationship tended towards an end, a state where there is either complete darkness, or intense fire that burns the house down, thus came the title, Candle House.</span></p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/candlehouse.jpg" alt="Candle House">
         </div>
       </div>
 
@@ -105,24 +76,17 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Hide and Seek. <span class="text-muted">A cover of the Imogen Heap song.</span></h2>
+          <p class="lead">I tried to turn Imogen Heap's beautiful vocal harmonies into guitar accompaniment. Hope I didn't ruin the song. <span class="text-muted">"Oily marks appear on walls where pleasure moments hung before. The takeover, the sweeping insensitivity of this still life..."</span></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/hideandseek.jpg" alt="Hide and Seek">
         </div>
       </div>
 
       <hr class="featurette-divider">
 
       <!-- /END THE FEATURETTES -->
-
-
-      <!-- FOOTER -->
-      <footer>
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2016 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-      </footer>
 
     </div><!-- /.container -->
   </body>
