--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 <!-- NAVBAR
 ================================================== -->
   <body>
-    <div class="navbar-wrapper">
+    <div class="navbar-wrapper" id='home'>
       <div class="container">
         <nav class="navbar navbar-static-top">
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#about">About me</a></li>
-                <li><a href="#">Origianls</a></li>
-                <li><a hred="#">Covers</a></li>
+                <li class="active"><a href="#home">Home</a></li>
+                <li><a href="#orignals">Origianls</a></li>
+                <li><a hred="#covers">Covers</a></li>
               </ul>
             </div>
           </div>
@@ -51,7 +50,7 @@
 
       <!-- START THE FEATURETTES -->
       <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7" id='originals'>
           <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
           <p class="lead">It's a sad love song written in times of insecurity and doubt. <span class="text-muted">"Broken words, broken hearts, half drunk wine and empty cups. Close the curtains, don’t let the light in. Clasping hands, shivering bones, sound of opening and slamming doors..."</span></p>
         </div>
@@ -75,7 +74,7 @@
       <hr class="featurette-divider">
 
       <div class="row featurette">
-        <div class="col-md-7">
+        <div class="col-md-7" id='covers'>
           <h2 class="featurette-heading">Hide and Seek. <span class="text-muted">A cover of the Imogen Heap song.</span></h2>
           <p class="lead">I tried to turn Imogen Heap's beautiful vocal harmonies into guitar accompaniment. Hope I didn't ruin the song. <span class="text-muted">"Oily marks appear on walls where pleasure moments hung before. The takeover, the sweeping insensitivity of this still life..."</span></p>
         </div>
