--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <div class="container marketing">
 
       <!-- START THE FEATURETTES -->
+      <hr class="featurette-divider">
+
       <div class="row featurette">
         <div class="col-md-7" id='originals'>
           <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
