--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#home">Home</a></li>
+                <li><a href="aboutme.html">About me</a></li>
                 <li><a href="#orignals">Origianls</a></li>
                 <li><a hred="#covers">Covers</a></li>
               </ul>
