--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
           <div class="container">
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#home">Home</a></li>
-                <li><a href="aboutme.html">About me</a></li>
-                <li><a href="#orignals">Origianls</a></li>
-                <li><a hred="#covers">Covers</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="rachel.html">Rachel</a></li>
+                <li><a href="leigh.html">Leigh</a></li>
+                <li><a href="guzide.html">Güzide</a></li>
               </ul>
             </div>
           </div>
@@ -34,11 +34,11 @@
     <div id="openingpic" class="carousel">
       <div class="carousel-inner">
         <div class="item active">
-          <img class="first-slide" src='images/ryan-holloway-273158.jpg' alt='Titlepic'>
+          <img class="first-slide" src='images/jordi-ganduxe-358819.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
-              <h1>I'm Rachel and I sing once in a while.</h1>
-              <p>And here you can find some sad music, some of which I wrote, others are covers. Hope you enjoy.</p>
+              <h1>This is for our HTML class group project.</h1>
+              <p>We will have one introduction page each dedicated to what we want to write about. Life, love, food, travel, all that good stuff.</p>
             </div>
           </div>
         </div>
@@ -52,11 +52,11 @@
       <!-- START THE FEATURETTES -->
       <div class="row featurette">
         <div class="col-md-7" id='originals'>
-          <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
-          <p class="lead">It's a sad love song written in times of insecurity and doubt. <span class="text-muted">"Broken words, broken hearts, half drunk wine and empty cups. Close the curtains, don’t let the light in. Clasping hands, shivering bones, sound of opening and slamming doors..."</span></p>
+          <h2 class="featurette-heading"><a href="rachel.html">Rachel Duan.</a> <span class="text-muted">An ordinary Chinese girl.</span></h2>
+          <p class="lead">Just your nice nerdy friend. Likes standup comedy and Japanese food. Ideally would like to travel more. Looking for a beatboxer for the a capella choir that she's in. Blah blah blah will write more about myself...</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/norwegianbird.jpeg" alt="Norwegian Birds">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/rachel.jpg" alt="Rachel Image">
         </div>
       </div>
 
@@ -64,11 +64,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Candle House. <span class="text-muted">Another original song.</span></h2>
-          <p class="lead">A song I wrote after hearing the story of my parents, how they fell in love, got married, and then stayed in an unintentional, stagnant, loveless silence for several years before they peacefully divorced. <span class="text-muted">I want to show that almost disturbing serenity, the delicate balance of hope and despair as their relationship tended towards an end, a state where there is either complete darkness, or intense fire that burns the house down, thus came the title, Candle House.</span></p>
+          <h2 class="featurette-heading">Leigh Rowland. <span class="text-muted">Write something about yourself!</span></h2>
+          <p class="lead">Short introduction of some sort.</p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/candlehouse.jpg" alt="Candle House">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/leigh.jpg" alt="Candle House">
         </div>
       </div>
 
@@ -76,11 +76,11 @@
 
       <div class="row featurette">
         <div class="col-md-7" id='covers'>
-          <h2 class="featurette-heading">Hide and Seek. <span class="text-muted">A cover of the Imogen Heap song.</span></h2>
-          <p class="lead">I tried to turn Imogen Heap's beautiful vocal harmonies into guitar accompaniment. Hope I didn't ruin the song. <span class="text-muted">"Oily marks appear on walls where pleasure moments hung before. The takeover, the sweeping insensitivity of this still life..."</span></p>
+          <h2 class="featurette-heading">Güzide Sofi. <span class="text-muted">Write something about yourself.</span></h2>
+          <p class="lead">Hopefully your flu gets better soon :( </p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/hideandseek.jpg" alt="Hide and Seek">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/guzide.jpg" alt="Hide and Seek">
         </div>
       </div>
 
