--- a/leigh.html
+++ b/leigh.html
@@ -20,7 +20,7 @@
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="rachel.html">Rachel</a></li>
                 <li><a href="leigh.html">Leigh</a></li>
-                <li><a hred="guzide.html">Güzide</a></li>
+                <li><a href="guzide.html">Güzide</a></li>
               </ul>
             </div>
           </div>
