--- a/guzide.html
+++ b/guzide.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rachel - Music</title>
+    <!-- Remember to change this!!! -->
+    <title>Güzide - Something</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
