guzide and intro done

--- a/guzide.html
+++ b/guzide.html
@@ -39,14 +39,13 @@
           <img class="first-slide" src='images/annie-spratt-277548.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
-              <h1>I'm Güzide and maybe write some more stuff about yourself.</h1>
-              <p>Just write about drinking wine and being old idk. The rest is from my page. ya know the drills. let me know if you need help on anything.</p>
+              <h1>I'm Güzide and I photograph things.</h1>
+              <p>Hi there, below is the partial summary of my portfolio with a few tips and ideas as bonus. If you are ever curious about my whereabouts, you can probably see me on my knees in London or elsewhere taking a picture of a historic landmark, the sunset or perhaps a modern art piece.</p>
             </div>
           </div>
         </div>
       </div>
     </div><!-- /.carousel -->
-
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
@@ -54,12 +53,22 @@
       <!-- START THE FEATURETTES -->
       <div class="row featurette">
         <div class="col-md-7" id='originals'>
-          <h2 class="featurette-heading">The Norwegian Bird. <span class="text-muted">An original song.</span></h2>
-          <p class="lead">It's a sad love song written in times of insecurity and doubt. <span class="text-muted">"Broken words, broken hearts, half drunk wine and empty cups. Close the curtains, don’t let the light in. Clasping hands, shivering bones, sound of opening and slamming doors..."</span></p>
+          <h2 class="featurette-heading">Architectural Photography. <span class="text-muted">Buildings from different perspectives.</span></h2>
+          <p class="lead">Here is a list of the best London photography spots and tips. <span class="text-muted">21 best London photography spots (and tips for each one!):
+            <ol><span class="text-muted">
+              <li>Regent street</li>
+              <li>Portobello Road</li>
+              <li>Tate Modern</li>
+              <li>Greenwich park</li>
+              <li>Little Venice</li>
+              <li>Shoreditch street art</li>
+              <li>Primrose Hill...</li>
+            </ol></span></p>
+          </span></p>
         </div>
         <div class="col-md-5">
           <!-- Make sure the picture here is rectangular so it looks pretty, unless you have a lot to write about lol-->
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/norwegianbird.jpeg" alt="Norwegian Birds">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3950.jpg" alt="Norwegian Birds">
         </div>
       </div>
 
@@ -67,11 +76,12 @@
 
       <div class="row featurette">
         <div class="col-md-7 col-md-push-5">
-          <h2 class="featurette-heading">Candle House. <span class="text-muted">Another original song.</span></h2>
-          <p class="lead">A song I wrote after hearing the story of my parents, how they fell in love, got married, and then stayed in an unintentional, stagnant, loveless silence for several years before they peacefully divorced. <span class="text-muted">I want to show that almost disturbing serenity, the delicate balance of hope and despair as their relationship tended towards an end, a state where there is either complete darkness, or intense fire that burns the house down, thus came the title, Candle House.</span></p>
+          <h2 class="featurette-heading">Sunsets and Rain. <span class="text-muted">and Everything in between.</span></h2>
+          <p class="lead">In photography, the golden hour is the period of daytime shortly after sunrise or before sunset, during which daylight is redder and softer than when the Sun is higher in the sky. The opposite period during twilight is blue hour, just before sunrise or after sunset, when indirect sunlight is evenly diffused.</span></p>
+          <span class="text-muted">Sunsets have almost been my favourite time of the day to photograph. It's a bit cliche but sunsets have this property of being ordinary but yet spectacular at the same time.</span></p>
         </div>
         <div class="col-md-5 col-md-pull-7">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/candlehouse.jpg" alt="Candle House">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3949.jpg" alt="Candle House">
         </div>
       </div>
 
@@ -79,11 +89,11 @@
 
       <div class="row featurette">
         <div class="col-md-7" id='covers'>
-          <h2 class="featurette-heading">Hide and Seek. <span class="text-muted">A cover of the Imogen Heap song.</span></h2>
-          <p class="lead">I tried to turn Imogen Heap's beautiful vocal harmonies into guitar accompaniment. Hope I didn't ruin the song. <span class="text-muted">"Oily marks appear on walls where pleasure moments hung before. The takeover, the sweeping insensitivity of this still life..."</span></p>
+          <h2 class="featurette-heading">Nature Photography. <span class="text-muted">Parks, roads, hills, sea.</span></h2>
+          <p class="lead">Here is a few nature photographs I took this year mainly in London, Reading, Sussex and Cyprus. <span class="text-muted">Just like in some of the architectural photographs I posted above, we can spot the contrast between nature and cities here as well, expecially in the first three pictures...</span></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive center-block img-rounded" src="images/hideandseek.jpg" alt="Hide and Seek">
+          <img class="featurette-image img-responsive center-block img-rounded" src="images/IMG_3948.jpg" alt="Hide and Seek">
         </div>
       </div>
 
