--- a/guzide.html
+++ b/guzide.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Remember to change this!!! -->
-    <title>Güzide - Something</title>
+    <title>Güzide - Photography</title>
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
   </head>
@@ -36,11 +36,11 @@
       <div class="carousel-inner">
         <div class="item active">
           <!-- Change here for the background image. -->
-          <img class="first-slide" src='images/annie-spratt-277548.jpg' alt='Titlepic'>
+          <img class="first-slide" src='images/guzidebackground.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
               <h1>I'm Güzide and I photograph things.</h1>
-              <p>Hi there, below is the partial summary of my portfolio with a few tips and ideas as bonus. If you are ever curious about my whereabouts, you can probably see me on my knees in London or elsewhere taking a picture of a historic landmark, the sunset or perhaps a modern art piece.</p>
+              <p> Hi there, below is the partial summary of my portfolio with a few tips and ideas as bonus. If you are ever curious about my whereabouts, you can probably see me on my knees in London or elsewhere taking a picture of a historic landmark, the sunset or perhaps a modern art piece.</p>
             </div>
           </div>
         </div>
