--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <div class="row featurette">
         <div class="col-md-7" id='covers'>
-          <h2 class="featurette-heading">Güzide Sofi. <span class="text-muted">Cypriot studying in London.</span></h2>
+          <h2 class="featurette-heading"><a href="guzide.html">Güzide Sofi. </a><span class="text-muted">Cypriot studying in London.</span></h2>
           <p class="lead">Hey, this is our homepage, so apparently I have to say something about myself. Sometimes, it is really hard to introduce yourself because you know yourself so well that you do not know where to start with and how you can tell people a lot about yourself without saying much. Here goes nothing.</p>
 
 <p class="lead">There are many things I like to do, to see, and to experience. I like to read, I like to write; I like to think, I like to dream; I like to talk, I like to listen; I like to sleep, I like to walk; I like to explore, I like to drive.</p>
