changing title pic

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
     <div id="openingpic" class="carousel">
       <div class="carousel-inner">
         <div class="item active">
-          <img class="first-slide" src='images/jordi-ganduxe-358819.jpg' alt='Titlepic'>
+          <img class="first-slide" src='images/karl-jk-hedin-482509-unsplash.jpg' alt='Titlepic'>
           <div class="container">
             <div class="carousel-caption">
-              <h1>This is for our HTML class group project.</h1>
-              <p>We will have one introduction page each dedicated to what we want to write about. Life, love, food, travel, all that good stuff.</p>
+              <h1>This is for our HTML group project.</h1>
+              <p>It's like a blog post where we each have one page and write about whatever we want. Life, love, food, travel, all that good stuff.</p>
             </div>
           </div>
         </div>
       </div>
-    </div><!-- /.carousel -->
+    </div>
+
+    <!-- /.carousel -->
 
     <!-- Wrap the rest of the page in another container to center all the content. -->
 
