--- a/topspots.html
+++ b/topspots.html
@@ -23,6 +23,8 @@ ul li {
 </head>
 <body>
 
+<button onclick="goBack()">Go Back</button>
+
 <h1>26 best London photography spots</h1>
 
 <ol type="1">
@@ -247,6 +249,14 @@ ul li {
 </p>
 
 </ol>
+
+<script>
+
+function goBack() {
+    window.history.back();
+}
+
+</script>
 
 </body>
 </html>
